--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,3 +1,3 @@
 <ion-tabs color='light'>
-  <ion-tab [root]="tab1Root" tabTitle="Chamados" tabIcon="home" ></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Chamados" tabIcon="car" ></ion-tab>
 </ion-tabs>
