--- a/src/pages/chamados/chamados.html
+++ b/src/pages/chamados/chamados.html
@@ -13,54 +13,61 @@
     <ion-title>Chamados</ion-title>
   </ion-navbar>
 
+  <ion-toolbar no-border-top color='primary'>
+    <ion-segment [(ngModel)]="selectedSegment">
+      <ion-segment-button class='chamado-segment' value="1">
+        Disponíveis
+      </ion-segment-button>
+      <ion-segment-button class='chamado-segment' value="2">
+        Concluidos
+      </ion-segment-button>
+    </ion-segment>
+  </ion-toolbar>
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
 
-<ion-list >
-  <ion-item-sliding *ngFor='let chamado of chamados'>
-    <ion-card ion-item>
-        <ion-card-header>
-           <h2>{{chamado.client}}</h2>
-        </ion-card-header>
+  <ion-list >
+    <ion-item-sliding *ngFor='let chamado of chamados'>
 
-      </ion-card>
-    <ion-item-options side="left">
-      <button ion-button color="primary">
-        <ion-icon name="ios-clipboard"></ion-icon>
-        Detalhes
-      </button>
-    </ion-item-options>
-    <ion-item-options side="right">
-      <button ion-button (click)="finalizarChamado(chamado._id)" color="danger">
-        <ion-icon name="close-circle"></ion-icon>
-        Finalizar
-      </button>
-    </ion-item-options>
-  </ion-item-sliding>
-</ion-list>
+      <ion-item class="chamados-card">
+          <ion-card-header>
+            <h2>{{chamado.client}}</h2>
+          </ion-card-header>
 
-<ion-item>
-    <ion-row>
-      <ion-col col-6>
-        <button ion-button color="danger" type="button" full round large (click)="takePhoto()">
-          <ion-icon name="camera"></ion-icon>
+      </ion-item>
+
+
+
+      <ion-item-options side="left">
+        <button class="btn-options" ion-button color="primary">
+          <ion-icon name="ios-clipboard"></ion-icon>
+          Inciar
         </button>
-      </ion-col>
-      <ion-col col-6>
-        <button ion-button color="secondary" type="button" full round large (click)="selectPhoto()">
-          <ion-icon name="image"></ion-icon>
-        </button>
-      </ion-col>
-    </ion-row>
-  </ion-item>
-  <ion-item *ngIf="error">
-    <strong>{{error}}</strong>
-  </ion-item>
-  <ion-item>
-    <!-- <img *ngIf="myPhoto" class="img-responsive" [src]="myPhoto"/> -->
-    {{myPhoto}}
-  </ion-item>
+      </ion-item-options>
 
+      <ion-item-options side="right">
+        <button class="btn-options" ion-button (click)="finalizarChamado(chamado._id)" color="danger">
+          <ion-icon name="close-circle"></ion-icon>
+          Finalizar
+        </button>
+      </ion-item-options>
+
+    </ion-item-sliding>
+  </ion-list>
+
+
+
+
+    <ion-item *ngIf="error">
+      <strong>{{error}}</strong>
+    </ion-item>
+    <ion-item>
+       <img *ngIf="myPhoto" class="img-responsive" [src]="myPhoto"/>
+      <!-- {{myPhoto}} -->
+    </ion-item>
+    <ion-fab bottom right>
+        <button (click)="takePhoto()" ion-fab><ion-icon name="camera"></ion-icon></button>
+    </ion-fab>
 </ion-content>
