finishing basic redux implementation

--- a/src/pages/chamados/chamados.html
+++ b/src/pages/chamados/chamados.html
@@ -70,4 +70,10 @@
     <ion-fab bottom right>
         <button (click)="takePhoto()" ion-fab><ion-icon name="camera"></ion-icon></button>
     </ion-fab>
+
+    		<button (click)="increment()">Increment</button>
+		<div>Current Count: {{ counter | async }}</div>
+		<button (click)="decrement()">Decrement</button>
+
+		<button (click)="reset()">Reset Counter</button>
 </ion-content>
