--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,3 +1,34 @@
-<ion-tabs color='light'>
+<ion-menu [content]="content">
+  <ion-header padding>
+    <div class="side-menu">
+      <div class="first-section">
+        <img class="img-avatar" src="assets/img/avatar.jpg">
+      </div>
+      <div class="second-section">
+        <ion-title>I'm Groot</ion-title>
+      </div>
+    </div>
+    <!-- <ion-toolbar color="primary">
+      <ion-title>Menu</ion-title>
+    </ion-toolbar> -->
+  </ion-header>
+  <ion-content>
+    <ion-list no-lines>
+      <button ion-item>
+        <ion-icon name="md-person" item-start></ion-icon>
+        Perfil
+      </button>
+      <button ion-item>
+        <ion-icon name="pulse" item-start></ion-icon>
+        Graficos
+      </button>
+      <button ion-item>
+        <ion-icon name="chatbubbles" item-start></ion-icon>
+        Chat
+      </button>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+<ion-tabs #content color='light'>
   <ion-tab [root]="tab1Root" tabTitle="Chamados" tabIcon="car" ></ion-tab>
 </ion-tabs>
