--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -5,12 +5,12 @@
 
               <ion-item>
                 <ion-label><ion-icon name="person"></ion-icon></ion-label>
-                <ion-input [(ngModel)]="username" placeholder="username" type="text"></ion-input>
+                <ion-input [(ngModel)]="username" placeholder="Usuario" type="text"></ion-input>
               </ion-item>
 
               <ion-item>
                 <ion-label><ion-icon name="lock"></ion-icon></ion-label>
-                <ion-input [(ngModel)]="password" placeholder="password" type="password"></ion-input>
+                <ion-input [(ngModel)]="password" placeholder="Senha" type="password"></ion-input>
               </ion-item>
 
             </ion-list>
