--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -26,6 +26,10 @@
         <ion-icon name="chatbubbles" item-start></ion-icon>
         Chat
       </button>
+      <button ion-item (click)="logout()">
+        <ion-icon name="share-alt" item-start></ion-icon>
+        Logout
+      </button>
     </ion-list>
   </ion-content>
 </ion-menu>
