--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,22 +1,29 @@
 <ion-content padding class="login-page">
-   <ion-row class="login-form">
-        <ion-col>
-            <ion-list>
+  <ion-row class="login-form">
+       <ion-col>
 
-              <ion-item>
-                <ion-label><ion-icon name="person"></ion-icon></ion-label>
-                <ion-input [(ngModel)]="username" placeholder="Usuario" type="text"></ion-input>
-              </ion-item>
-
-              <ion-item>
-                <ion-label><ion-icon name="lock"></ion-icon></ion-label>
-                <ion-input [(ngModel)]="password" placeholder="Senha" type="password"></ion-input>
-              </ion-item>
-
-            </ion-list>
-
-            <button ion-button full (click)="login()" color="primary" class="login-button">Login</button>
-
+          <ion-col class="logo">
+          <img src="assets/img/Logo Connecta_Azul_to_Pink.svg" alt="">
         </ion-col>
-    </ion-row>
+           <ion-list>
+
+             <ion-item>
+               <ion-label><ion-icon name="person"></ion-icon></ion-label>
+               <ion-input [(ngModel)]="username" placeholder="Usuário" type="text"></ion-input>
+             </ion-item>
+
+             <ion-item>
+               <ion-label><ion-icon name="lock"></ion-icon></ion-label>
+               <ion-input [(ngModel)]="password" placeholder="Senha" type="password"></ion-input>
+             </ion-item>
+
+             <!-- <ion-item>
+              </ion-item> -->
+
+           </ion-list>
+
+           <button ion-button full (click)="login()" color="primary" class="login-button">Conectar</button>
+
+       </ion-col>
+   </ion-row>
 </ion-content>
