--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -33,6 +33,6 @@
     </ion-list>
   </ion-content>
 </ion-menu>
-<ion-tabs #content color='light'>
+<ion-tabs #content color='dark'>
   <ion-tab [root]="tab1Root" tabTitle="Chamados" tabIcon="car" ></ion-tab>
 </ion-tabs>
