adding new component

--- a/src/pages/chamados/chamados.html
+++ b/src/pages/chamados/chamados.html
@@ -55,7 +55,7 @@
 
 
       <ion-item-options side="left">
-        <button class="btn-options" ion-button color="primary">
+        <button class="btn-options" ion-button color="primary" (click)="iniciarAtendimento(atendimento._id)">
           <ion-icon name="ios-clipboard"></ion-icon>
           Inciar
         </button>
