--- a/src/pages/chamados/chamados.html
+++ b/src/pages/chamados/chamados.html
@@ -16,19 +16,56 @@
   <ion-toolbar no-border-top color='primary'>
     <ion-segment [(ngModel)]="selectedSegment">
       <ion-segment-button class='chamado-segment' value="1">
-        Disponíveis
+          Disponíveis
       </ion-segment-button>
       <ion-segment-button class='chamado-segment' value="2">
-        Concluidos
+          Concluidos
       </ion-segment-button>
     </ion-segment>
   </ion-toolbar>
 </ion-header>
 
 
-<ion-content>
+<ion-content class="page-chamados">
 
-  <ion-list >
+  <ion-card *ngFor='let atendimento of atendimentos$ | async'>
+    <ion-card-header>
+      <ion-row>
+        <ion-col col-6 class="nome-cliente"><h2><strong>{{atendimento.cliente.nome_razao_social}}</strong></h2></ion-col>
+        <ion-col col-6 class="data-atendimento"><p>{{atendimento.data_atendimento | date: 'dd/MM/yy'}}</p></ion-col>
+      </ion-row>
+
+
+    </ion-card-header>
+
+
+  <ion-card-content>
+    <ion-list >
+
+      <ion-row>
+
+        <ion-col col-12>
+            <p>
+              <ion-icon name="pin" item-start></ion-icon>
+               {{ atendimento.endereco.cidade +' - '+ atendimento.endereco.uf +', '+ atendimento.endereco.cep   }}
+            </p>
+        </ion-col>
+
+        <ion-col col-12>
+            <p>
+                <ion-icon name="list" item-start></ion-icon>
+               {{ atendimento.descricao   }}
+            </p>
+        </ion-col>
+
+      </ion-row>
+
+    </ion-list>
+  </ion-card-content>
+
+</ion-card>
+
+  <!-- <ion-list >
     <ion-item-sliding *ngFor='let atendimento of atendimentos$ | async'>
 
       <ion-item class="chamados-card">
@@ -78,11 +115,11 @@
       <strong>{{error}}</strong>
     </ion-item>
     <ion-item>
-       <img *ngIf="myPhoto" class="img-responsive" [src]="myPhoto"/>
+       <img *ngIf="myPhoto" class="img-responsive" [src]="myPhoto"/> -->
       <!-- {{myPhoto}} -->
-    </ion-item>
+    <!-- </ion-item>
     <ion-fab bottom right>
         <button (click)="takePhoto()" ion-fab><ion-icon name="camera"></ion-icon></button>
-    </ion-fab>
+    </ion-fab>  -->
 
 </ion-content>
