--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -34,5 +34,5 @@
   </ion-content>
 </ion-menu>
 <ion-tabs #content color="white">
-  <ion-tab [root]="tab1Root" tabTitle="Chamados" tabIcon="car" ></ion-tab>
+  <ion-tab [root]="tab1Root" tabIcon="car" ></ion-tab>
 </ion-tabs>
