--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -1,20 +1,75 @@
-<!--
-  Generated template for the DetailsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>details</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Detalhes</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
+  <ion-card *ngIf="atendimento$  | async; let atendimento">
+    <img src="assets/img/services.jpg" />
 
-  {{ atendimento$ | async | json}}
+    <ion-card-content>
+      <ion-card-title class="line">
+        <h2><strong>{{atendimento.cliente.nome_razao_social | uppercase}}</strong></h2>
+      </ion-card-title>
+
+      <ion-list no-lines>
+        <ion-item>
+          <ion-icon color="primary" name="person" item-start></ion-icon>
+           <h2>Contato</h2>
+           <p>{{ atendimento.contato.nome }}</p>
+       </ion-item>
+
+       <ion-item class="line" text-wrap>
+          <ion-icon color="primary" name="pin" item-start></ion-icon>
+          <h2>Localização</h2>
+          <p>{{ atendimento.endereco.rua + ' ' + ',' + ' '
+              + atendimento.endereco.numero + ' ' + ',' + ' '
+              + atendimento.endereco.bairro + ' ' + ',' + ' '
+              + atendimento.endereco.cidade + ' ' + ',' + ' '
+              + atendimento.endereco.uf + ' ' + ',' + ' '
+              + atendimento.endereco.cep }}</p>
+       </ion-item>
+
+       <ion-item>
+          <ion-icon color="primary" name="information-circle" item-start></ion-icon>
+          <h2>Tipo de serviço</h2>
+          <p>{{atendimento.tipo}}</p>
+       </ion-item>
+
+       <ion-item>
+          <ion-icon color="primary" name="information-circle" item-start></ion-icon>
+          <h2>Modelo do equipamento</h2>
+          <p>{{atendimento.modelo_equipamento}}</p>
+       </ion-item>
+
+       <ion-item>
+          <ion-icon color="primary" name="information-circle" item-start></ion-icon>
+          <h2>Descrição do atendimento</h2>
+          <p>{{atendimento.descricao}}</p>
+       </ion-item>
+
+       <ion-item>
+          <ion-icon color="primary" name="information-circle" item-start></ion-icon>
+          <h2>Testes efetuados</h2>
+          <p>{{atendimento.testes_efetuados}}</p>
+       </ion-item>
+
+       <!-- <ion-fab left bottom>
+          <button ion-fab color="primary"><ion-icon name="arrow-dropright"></ion-icon></button>
+          <ion-fab-list side="right">
+            <button ion-fab><ion-icon name="camera"></ion-icon></button>
+            <button ion-fab><ion-icon name="logo-twitter"></ion-icon></button>
+            <button ion-fab><ion-icon name="logo-vimeo"></ion-icon></button>
+            <button ion-fab><ion-icon name="star"></ion-icon></button>
+          </ion-fab-list>
+        </ion-fab> -->
+
+      </ion-list>
+    </ion-card-content>
+
+  </ion-card>
+
 
 </ion-content>
