--- a/src/pages/chamados/chamados.html
+++ b/src/pages/chamados/chamados.html
@@ -48,14 +48,14 @@ Ionic pages and navigation.
         <ion-row>
           <ion-col col-12>
             <p>
-              <ion-icon name="calendar-outline" color="primary"></ion-icon>
+              <ion-icon name="calendar" color="primary"></ion-icon>
               {{atendimento.data_atendimento | date: 'dd/MM/yy'}}
             </p>
           </ion-col>
 
           <ion-col col-12>
             <p>
-              <ion-icon name="pin-outline" color="primary"></ion-icon>
+              <ion-icon name="pin" color="primary"></ion-icon>
               {{ atendimento.endereco.cidade +' - '
               + atendimento.endereco.uf +', '
               + atendimento.endereco.cep }}
@@ -63,7 +63,7 @@ Ionic pages and navigation.
           </ion-col>
 
           <ion-col text-right>
-            <button ion-button clear small color="danger" icon-start>
+            <button ion-button clear small icon-start>
             <ion-icon name='navigate'></ion-icon>
             GPS
             </button>
