--- a/src/pages/chamados/chamados.html
+++ b/src/pages/chamados/chamados.html
@@ -63,9 +63,9 @@ Ionic pages and navigation.
           </ion-col>
 
           <ion-col text-right>
-            <button ion-button clear small icon-start>
-            <ion-icon name='navigate'></ion-icon>
-            GPS
+            <button ion-button clear small icon-start (click)='openGPS(atendimento.endereco)'>
+              <ion-icon name='navigate'></ion-icon>
+              GPS
             </button>
           </ion-col>
 
@@ -73,7 +73,6 @@ Ionic pages and navigation.
 
       </ion-list>
     </ion-card-content>
-
   </ion-card>
 
 </ion-content>
