--- a/src/pages/modal/modal.html
+++ b/src/pages/modal/modal.html
@@ -39,6 +39,6 @@ Ionic pages and navigation.
     </ion-row>
   </ion-list>
 
-  <button full class="salvar" ion-button color="primary">Salvar</button>
+  <button outline class="salvar" ion-button color="primary">Salvar</button>
 
 </ion-content>
