--- a/src/pages/chamados/chamados.html
+++ b/src/pages/chamados/chamados.html
@@ -14,7 +14,7 @@ Ionic pages and navigation.
   <ion-toolbar no-border-top color='primary'>
     <ion-segment [(ngModel)]="selectedSegment">
       <ion-segment-button class='chamado-segment' value="1">
-        Disponíveis
+        Hoje
       </ion-segment-button>
       <ion-segment-button class='chamado-segment' value="2">
         Concluidos
@@ -62,8 +62,8 @@ Ionic pages and navigation.
             </p>
           </ion-col>
 
-          <ion-col text-right>
-            <button ion-button clear small icon-start (click)='openGPS(atendimento.endereco)'>
+          <ion-col text-right class="gps">
+            <button ion-button color="light" outline icon-start (click)='openGPS(atendimento.endereco)'>
               <ion-icon name='navigate'></ion-icon>
               GPS
             </button>
