chore: finish the implementation of template login page

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -3,7 +3,7 @@
        <ion-col>
 
           <ion-col class="logo">
-          <img src="assets/img/Logo Connecta_Azul_to_Pink.svg" alt="">
+          <img src="assets/img/Logo Connecta_Branco.svg" alt="">
         </ion-col>
            <ion-list>
 
@@ -17,12 +17,9 @@
                <ion-input [(ngModel)]="password" placeholder="Senha" type="password"></ion-input>
              </ion-item>
 
-             <!-- <ion-item>
-              </ion-item> -->
-
            </ion-list>
 
-           <button ion-button full (click)="login()" color="primary" class="login-button">Conectar</button>
+           <button ion-button full (click)="login()" color="primary" class="login-button"><i class="fa fa-sign-in" aria-hidden="true"></i>Conectar</button>
 
        </ion-col>
    </ion-row>
