addin the capability of taking photos

--- a/src/pages/pesquisa/pesquisa.html
+++ b/src/pages/pesquisa/pesquisa.html
@@ -3,7 +3,7 @@
   <ion-slides #slides (ionSlideWillChange)="onSlideChangeStart($event)" pager>
 
     <ion-slide style="background-color:#34495e">
-      <h2>Pergunta 1</h2>
+      <h2>Deseja participar da avaliação do atendimento?</h2>
     </ion-slide>
 
     <ion-slide style="background-color: #34495e">
