--- a/src/pages/chamados/chamados.html
+++ b/src/pages/chamados/chamados.html
@@ -12,7 +12,7 @@ Ionic pages and navigation.
   </ion-navbar>
 
   <ion-toolbar no-border-top color='primary'>
-    <ion-segment [(ngModel)]="selectedSegment">
+    <ion-segment [(ngModel)]="selectedSegment" (ionChange)="changeSegment()">
       <ion-segment-button class='chamado-segment' value="1">
         Hoje
       </ion-segment-button>
