--- a/src/pages/pesquisa/pesquisa.html
+++ b/src/pages/pesquisa/pesquisa.html
@@ -7,12 +7,30 @@
     </ion-slide>
 
     <ion-slide style="background-color: #34495e">
-      <h2>Pergunta 2</h2>
+      <h2 class="pergunta">Como você avalia o atendimento do técnico?</h2>
+       <rating
+              max="5"
+              emptyStarIconName="star-outline"
+              halfStarIconName="star-half"
+              starIconName="star"
+              nullable="false">
+      </rating>
     </ion-slide>
 
     <ion-slide style="background-color: #34495e">
-      <h2>Pergunta 3</h2>
-      <button ion-button color="danger" (click)='finalizar()'>Finalizar</button>
+      <h2 class="pergunta">Você indicaria a Real Ponto?</h2>
+       <rating
+              max="5"
+              emptyStarIconName="star-outline"
+              halfStarIconName="star-half"
+              starIconName="star"
+              nullable="false">
+      </rating>
+    </ion-slide>
+
+
+    <ion-slide style="background-color: #34495e">
+      <button ion-button color="danger" class="pergunta" (click)='finalizar()'>Finalizar</button>
     </ion-slide>
 
   </ion-slides>
