--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,26 +1,30 @@
 <ion-content padding class="login-page">
   <ion-row class="login-form">
-       <ion-col>
+    <ion-col>
 
-          <ion-col class="logo">
-          <img src="assets/img/Logo Connecta_Branco.svg" alt="">
-        </ion-col>
-           <ion-list>
+      <ion-col class="logo">
+        <img src="assets/img/Logo Connecta_Branco.svg" alt="">
+      </ion-col>
+      <ion-list>
 
-             <ion-item>
-               <ion-label><ion-icon name="person"></ion-icon></ion-label>
-               <ion-input [(ngModel)]="username" placeholder="Usuário" type="text"></ion-input>
-             </ion-item>
+        <ion-item>
+          <ion-label>
+            <ion-icon name="person"></ion-icon>
+          </ion-label>
+          <ion-input [(ngModel)]="username" placeholder="Usuário" type="text"></ion-input>
+        </ion-item>
 
-             <ion-item>
-               <ion-label><ion-icon name="lock"></ion-icon></ion-label>
-               <ion-input [(ngModel)]="password" placeholder="Senha" type="password"></ion-input>
-             </ion-item>
+        <ion-item>
+          <ion-label>
+            <ion-icon name="lock"></ion-icon>
+          </ion-label>
+          <ion-input [(ngModel)]="password" placeholder="Senha" type="password"></ion-input>
+        </ion-item>
 
-           </ion-list>
+      </ion-list>
 
-           <button ion-button full (click)="login()" color="primary" class="login-button"><i class="fa fa-sign-in" aria-hidden="true"></i>Conectar</button>
+      <button ion-button full round (click)="login()"  class="login-button"><i class="fa fa-sign-in" aria-hidden="true"></i>Conectar</button>
 
-       </ion-col>
-   </ion-row>
+    </ion-col>
+  </ion-row>
 </ion-content>
