--- a/src/pages/pesquisa/pesquisa.html
+++ b/src/pages/pesquisa/pesquisa.html
@@ -2,35 +2,31 @@
 
   <ion-slides #slides (ionSlideWillChange)="onSlideChangeStart($event)" pager>
 
-    <ion-slide style="background-color:#34495e">
-      <h2>Deseja participar da avaliação do atendimento?</h2>
+    <ion-slide class="teste">
+
+      <h2 color="primary">A sua opinião importa!</h2>
+      <p> Através da sua opinião podemos aperfeiçoar nossos serviços</p>
+      <button ion-button color="accent" round>Iniciar avaliação</button>
     </ion-slide>
 
-    <ion-slide style="background-color: #34495e">
-      <h2 class="pergunta">Como você avalia o atendimento do técnico?</h2>
-       <rating
-              max="5"
-              emptyStarIconName="star-outline"
-              halfStarIconName="star-half"
-              starIconName="star"
-              nullable="false">
+    <ion-slide>
+      <h3 class="pergunta">Como você avalia o atendimento do técnico?</h3>
+      <rating max="5" emptyStarIconName="star-outline" halfStarIconName="star-half" starIconName="star" nullable="false">
       </rating>
     </ion-slide>
 
-    <ion-slide style="background-color: #34495e">
-      <h2 class="pergunta">Você indicaria a Real Ponto?</h2>
-       <rating
-              max="5"
-              emptyStarIconName="star-outline"
-              halfStarIconName="star-half"
-              starIconName="star"
-              nullable="false">
+    <ion-slide>
+      <h3 class="pergunta">Você indicaria a RealPonto?</h3>
+      <rating max="5" emptyStarIconName="star-outline" halfStarIconName="star-half" starIconName="star" nullable="false">
       </rating>
     </ion-slide>
 
 
-    <ion-slide style="background-color: #34495e">
-      <button ion-button color="danger" class="pergunta" (click)='finalizar()'>Finalizar</button>
+    <ion-slide>
+      <p>
+        Obrigado por participar da avaliação.
+      </p>
+      <button ion-button color="accent" class="pergunta" round (click)='finalizar()'>Finalizar</button>
     </ion-slide>
 
   </ion-slides>
