implemented rating so the user can rate the support techinician

--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -6,7 +6,7 @@
 
 
 <ion-content>
-  <ion-card *ngIf="atendimento">
+  <ion-card *ngIf="atendimento$ | async; let atendimento">
     <img src="assets/img/Fundo_Chamados.svg" />
 
     <ion-card-content>
