--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -23,8 +23,8 @@
                   <button (click)="mostrarPromptKmInicial(atendimento.km_inicio.km)" ion-fab><i class="fa fa-flag-o" aria-hidden="true"></i></button>
                   <button (click)="mostrarPromptKmFinal(atendimento.km_final.km)" ion-fab><i class="fa fa-flag-checkered" aria-hidden="true"></i></button>
                   <button ion-fab (click)="mostrarConfirmacaoInicioAtendimento()" ><ion-icon color="accent" name="play"></ion-icon></button>
-                  <button ion-fab (click)="takePhoto()"><i class="fa fa-camera" aria-hidden="true"></i></button>
-                  <button ion-fab (click)='mostrarConfirmacaoFimAtendimento()'><i class="fa fa-star" aria-hidden="true"></i></button>
+                  <button ion-fab (click)="mostrarOpcoesParaTirarFoto()"><i class="fa fa-camera" aria-hidden="true"></i></button>
+                  <button ion-fab (click)="mostrarConfirmacaoFimAtendimento()"><ion-icon color="accent" name="trophy"></ion-icon></button>
                 </ion-fab-list>
               </ion-fab>
           </ion-col>
