--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -25,6 +25,20 @@
 
       <button ion-button full round (click)="login()"  class="login-button"><i class="fa fa-sign-in" aria-hidden="true"></i>Conectar</button>
 
+      <ion-col class="social-icons">
+        <button ion-button icon-only>
+          <ion-icon ios="logo-facebook" md="logo-facebook"></ion-icon>
+        </button>
+
+        <button ion-button icon-only>
+          <ion-icon ios="logo-youtube" md="logo-youtube"></ion-icon>
+        </button>
+
+        <button ion-button icon-only>
+          <ion-icon ios="ios-globe" md="md-globe"></ion-icon>
+        </button>
+    </ion-col>
+
     </ion-col>
   </ion-row>
 </ion-content>
