chore: change the logo of app

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -3,7 +3,7 @@
     <ion-col>
 
       <ion-col class="logo">
-        <img src="assets/img/Logo Connecta_Branco.svg" alt="">
+        <img src="assets/img/Logo Connecta_Azul_to_Pink.svg" alt="">
       </ion-col>
       <ion-list>
 
