--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -8,24 +8,19 @@
         <ion-title>{{funcionario?.nome}}</ion-title>
       </div>
     </div>
-    <!-- <ion-toolbar color="primary">
-      <ion-title>Menu</ion-title>
-    </ion-toolbar> -->
+
   </ion-header>
   <ion-content>
     <ion-list no-lines>
+      <button ion-item (click)="uploadPhotos()">
+          <ion-icon name="cloud-upload" item-start></ion-icon>
+          {{(!uploadingPhotos)? 'Fotos Para Upload': 'Enviando Fotos' }}
+          <ion-badge item-end>  {{nImagensParaUpload$ | async}} </ion-badge>
+      </button>
       <button ion-item>
         <ion-icon name="md-person" item-start></ion-icon>
         Perfil
       </button>
-      <!-- <button ion-item>
-        <ion-icon name="pulse" item-start></ion-icon>
-        Graficos
-      </button> -->
-      <!-- <button ion-item>
-        <ion-icon name="chatbubbles" item-start></ion-icon>
-        Chat
-      </button> -->
       <button ion-item (click)="logout()">
         <ion-icon name="share-alt" item-start></ion-icon>
         Sair
