chore: small changes in tabs and add icons and splash to the project

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -10,11 +10,11 @@
     </div>
 
   </ion-header>
-  <ion-content>
+  <ion-content class="custom">
     <ion-list no-lines>
       <button ion-item (click)="uploadPhotos()">
-          <ion-icon name="cloud-upload" item-start></ion-icon>
-          {{(!uploadingPhotos)? 'Fotos Para Upload': 'Enviando Fotos' }}
+          <ion-icon name="reverse-camera" item-start></ion-icon>
+          {{(!uploadingPhotos)? 'Fotos a enviar': 'Enviando fotos...' }}
           <ion-badge item-end>  {{nImagensParaUpload$ | async}} </ion-badge>
       </button>
       <button ion-item>
