chamados: add new tab and created new selectors

--- a/src/pages/chamados/chamados.html
+++ b/src/pages/chamados/chamados.html
@@ -13,11 +13,14 @@ Ionic pages and navigation.
 
   <ion-toolbar no-border-top color='primary'>
     <ion-segment [(ngModel)]="selectedSegment" (ionChange)="changeSegment()">
-      <ion-segment-button class='chamado-segment' value="1">
+      <ion-segment-button class='chamado-segment' value="hoje">
         Hoje
       </ion-segment-button>
-      <ion-segment-button class='chamado-segment' value="2">
+      <ion-segment-button class='chamado-segment' value="concluidos">
         Concluidos
+      </ion-segment-button>
+      <ion-segment-button class='chamado-segment' value="proximos">
+        Próximos
       </ion-segment-button>
     </ion-segment>
   </ion-toolbar>
