ui: finished the interaction screen of technical

--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -24,6 +24,7 @@
                   <button [disabled]="!atendimento.km_inicio.km" (click)="mostrarPromptKmFinal(atendimento.km_final.km)" ion-fab><i class="fa fa-flag-checkered" aria-hidden="true"></i></button>
                   <button ion-fab  [disabled]="!atendimento.km_inicio.km || !atendimento.km_final.km || atendimento.inicio" [ngClass]="{'indica_inicio': atendimento.inicio !== null}"  (click)="mostrarConfirmacaoInicioAtendimento()" ><ion-icon color="accent" name="play"></ion-icon></button>
                   <button ion-fab (click)="mostrarOpcoesParaTirarFoto()"><i class="fa fa-camera" aria-hidden="true"></i></button>
+                  <button ion-fab (click)="mostrarModalInteracaoDados()"><ion-icon color="accent" name="md-list-box"></ion-icon></button>
                   <button ion-fab [disabled]="!atendimento.inicio" (click)="mostrarConfirmacaoFimAtendimento()"><ion-icon color="accent" name="trophy"></ion-icon></button>
                 </ion-fab-list>
               </ion-fab>
